GPE-mini-browser2 v0.0.1

- 08/04/2008 - Philippe De Swert

* src/main.c:
	- Split out ui functions to own ui files
* src/ui.c:
	- New file with ui functions
* src/ui.h:
	- New file with ui function declarations
* src/Makefile.am:
	- Use new files for build
* src/browser-data.h:
	- Added necessary defines for kiosk and smallscreen mode

- 06/04/2008 - Philippe De Swert

* src/main.c: 
	- Split out ui-callbacks and utility functions to make it more readable
* src/ui-callbacks.h:
	- Added header file for ui-callbacks
* src/ui-callbacks.h:
	- Added file with the implementation of the ui-callbacks
* src/utility-functions.h
	- Added header file for utility function declarations
* src/utility-functions.c
	- Added implementations of the utility functions
* src/Makefile.am
	- Added support for the new files

- 05/04/2008 - Philippe De Swert

* src/main.c:
	- Start adding tab support (first window is a notebook tab without decoration now)

- 04/04/2008 - Philippe De Swert

* src/main.c
	- Add gpe-mini-browser1 fullscreen modes

- 30/03/2008 - Philippe De Swert

* src/main.c :
	- Add fullscreen/kiosk mode

- 28/03/2008 - Philippe De Swert

* src/main.c : 
	- Add utility function to add http:// to urls to make 
	  loading work correctly
* configure.ac :
	- Add magic for .desktop file
* Makefile.am :
	- More .desktop file magic

- 27/03/2008 - Philippe De Swert

* configure.ac : 
	- Change .pc file dependency to new one for webkit
* src/main.c : 	
	- Fix issue with icon installation

- 29/01/2008 - Philippe De Swert
* src/main.c :
	- Basic implementation
	- Fullscreen functionality
	- Back and forward functionality
	- First svn check-in
	- Added changelog
	- Added "about:" dialog
	- Fixed up command-line handling